<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_list_outlet"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white_normal"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.88"
            android:hint="@string/et_search_outlet"
            android:textColor="@color/white_normal"
            android:textSize="15dp" />
        <ImageView
            android:id="@+id/iv_search"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_weight="0.12"
            android:background="@drawable/button_red_round"
            android:layout_height="match_parent"
            android:src="@drawable/icon_search"/>

    </LinearLayout>
    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:id="@+id/pb_dialog_list_outlet"/>

    <android.support.v7.widget.RecyclerView
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/rv_list_outlet" />

    <TextView
        android:id="@+id/tv_no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_no_result"
        android:gravity="center"
        android:textColor="@color/white_normal"/>

    <TextView
        android:id="@+id/bt_dialog_tutup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tutup"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textColor="@color/white_normal"
        android:background="@drawable/button_red_square"/>


</LinearLayout>